2005-06-18 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* sumiserv uses transports (irclib and aim currently functional)
	  now instead of relying on IRC
	* all IRC-specific code in sumiserv moved to irclib transport
	* aim transport can receive messages, thanks to pcapy
	* a modified pcapy can send raw link-layer frames using WinPcap
	* send_packet_UDP_WINPCAP is an alternate way to send UDP packets;
	  it can also spoof the Ethernet addresses--this method may allow
	  sumiserv to serve via UDP on Windows 95/98/Me (not tested)
	* send_frame_ETHER added
	* UDP checksums finally added; should reduce possibily of corruption

2004-09-09 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* "string".encode("hex") replaced with format strings instead--
	  sumiserv should now run compiled on Win32
	* updated docs about Windows XP SP2
	* sumiserv checks pack number

2004-09-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* broadcasting - send to multiple clients simultaneously (beta),
	  this paves the way for multicast support (not yet implemented)
	* ack timeout set to rwinsz*5 (for slower connections)

2004-09-07 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.7
	* fix KeyError: broadcast bug in sumiserv (Asuran)
	* validate client IP address in sumiserv (microbrew)
	* client resolves DNS names to IP addresses for myip
	* data carousel implemented for multicast, but still needs testing

2004-09-06 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* server-specified prefix now sent encapsulated in auth packet
	* last release until I have more time to continue working on SUMI

2004-09-04 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* password and local address now required for running rawproxd
	* maximum retries default set to 3 (changed from 5)
	* server no-ack timeout set to rwinsz*3 (from rwinsz*2),
	  works better on laggy IRC servers
	* broadcast support added to rawproxd
