@@ -46,7 +46,7 @@
                   '64.56.182.52'),
  'interface': '\\Device\\NPF_{3530F223-8959-4928-88A5-1672C094D6A8}',
  'irc_chans': {'#sumi': 'anon'},
- 'irc_nick': 'sumi-00',
+ 'irc_nick': 'sumi-0t',
  'irc_port': 6667,
  'irc_server': 'irc.xtc-dreams.com',
  'otpdir': '/home/jeff/p2p/sumi/otp/',
